update docs to reflect --list as well

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <div class='highlight'><pre>beet -g new_app -r="http://path/to/recipe.rb"</pre></div>
         <p>You can also pass a url to the template.</p>
 
-        <div class='highlight'><pre>beet -l</pre></div>
-        <p>You can see a list of current recipes by passing in '-l'.</p>
+        <div class='highlight'><pre>beet --list</pre></div>
+        <p>You can see a list of current recipes by passing in '--list' or '-l'.</p>
 
         <div class='highlight'><pre>beet just_recipe [app_name] -r=rails/db/mysql</pre></div>
         <p>You can also call just_recipe (aliased to -j as well) to just run a recipe without generating a new app. Pass in the directory to the
