--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div id="main">
         
-        <div id="latest_version"><a href="#installing">0.1.3</a></div>
+        <div id="latest_version"><a href="#installing">0.1.8</a></div>
         
         <ul id="pagenav">
           <li><a href="#what">What</a></li>
@@ -67,6 +67,10 @@
 
           <div class='highlight'><pre>beet -g complex_part_deux --use jquery_mysql_git</pre></div>
           <p>Once you've saved a configuration, you can reuse it with the -u/--use option and its name.</p>
+
+          <div class='highlight'><pre>beet -d -r rails/jquery</pre></div>
+          <div class='highlight'><pre>beet -d -t browsercms_demo</pre></div>
+          <p>You can use -d/--display to display the content of a recipe or template.</p>
         </div>
 
         <h4>There's More</h4>
