--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <h3 id="dependencies">Dependencies</h3>
         <ul>
           <li>rubygems &gt;= 1.3.1</li>
-          <li>thor &gt;= 0.9.9</li>
+          <li>wycats-thor &gt;= 0.9.9</li>
         </ul>
         
         <h3 id="installing">Installing</h3>
@@ -97,6 +97,8 @@
           <a href="http://github.com/jackdempsey/beet/tarball/master"><img src="beet_files/tar.png" border="0" width="90"></a>
         </div>
         <h3 id="requests">Bugs/Feature Requests</h3>
+        <p><b>Now with 1.9.1 support</b> - Thanks to <a href='http://github.com/jastix'>jastix</a> and <a href='http://github.com/invalidrecord'>invalidrecord</a> 
+        Beet now works with Ruby 1.9.1. This is brand new though, so please let me know if you have any problems or issues.</p>
         <p>The full and most up to date source is at github:</p>
         <p><a href="http://github.com/jackdempsey/beet/">http://github.com/jackdempsey/beet/</a></p>
         <p>Feel free to fork and build your own recipes. A repo exists for community contributions at <a href='http://github.com/jackdempsey/beet-recipes/tree/master'>http://github.com/jackdempsey/beet-recipes/tree/master</a>.
