update for version and to mention mongo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div id="main">
         
-        <div id="latest_version"><a href="#installing">0.4.1</a></div>
+        <div id="latest_version"><a href="#installing">0.4.3</a></div>
         
         <ul id="pagenav">
           <li><a href="#what">What</a></li>
@@ -106,7 +106,7 @@
               <ul>
                 <li>authlogic.rb</li>
                 <li>clearance.rb</li>
-                <li>devise.rb</li>
+                <li>devise.rb *new*</li>
               </ul>
               <li>clean_files.rb</li>
               <li>CMS</li>
@@ -121,6 +121,7 @@
               </ul>
               <li>DB</li>
               <ul>
+                <li>mongo.rb *new*</li>
                 <li>mysql.rb</li>
                 <li>postgres.rb</li>
               </ul>
