update to include swfupload recipe

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div id="main">
         
-        <div id="latest_version"><a href="#installing">0.4.3</a></div>
+        <div id="latest_version"><a href="#installing">0.4.4</a></div>
         
         <ul id="pagenav">
           <li><a href="#what">What</a></li>
@@ -127,6 +127,7 @@
               </ul>
               <li>git.rb</li>
               <li>jquery.rb</li>
+              <li>swfupload.rb *new*</li>
               <li>Testing</li>
               <ul>
                 <li>rspec.rb</li>
