--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div id="main">
         
-        <div id="latest_version"><a href="#installing">0.4.4</a></div>
+        <div id="latest_version"><a href="#installing">0.4.5</a></div>
         
         <ul id="pagenav">
           <li><a href="#what">What</a></li>
@@ -118,6 +118,7 @@
               <ul>
                 <li>blueprint.rb</li>
                 <li>reset.rb</li>
+                <li>compass.rb *new*</li>
               </ul>
               <li>DB</li>
               <ul>
