not sure why I capitalized them to begin with, but fixing that now.

--- a/index.html
+++ b/index.html
@@ -107,48 +107,48 @@
           <ul>
             <li>passenger/vhost.rb</li>
             <li>rack/middleware.rb</li>
-            <li>Rails3</li>
+            <li>rails3</li>
               <ul>
-                <li>Auth</li>
+                <li>auth</li>
                 <ul>
                   <li>devise.rb</li>
                 </ul>
                 <li>clean_files.rb</li>
-                <li>DB</li>
+                <li>db</li>
                 <ul>
                   <li>mysql.rb</li>
                 </ul>
-                <li>CSS</li>
+                <li>css</li>
                 <ul>
                   <li>reset.rb</li>
                 </ul>
-                <li>JS</li>
+                <li>js</li>
                 <ul>
                   <li>jquery.rb</li>
                 </ul>
                 <li>git.rb</li>
               </ul>
-            <li>Rails</li>
+            <li>rails</li>
             <ul>
-              <li>Auth</li>
+              <li>auth</li>
               <ul>
                 <li>authlogic.rb</li>
                 <li>clearance.rb</li>
                 <li>devise.rb *new*</li>
               </ul>
               <li>clean_files.rb</li>
-              <li>CMS</li>
+              <li>cms</li>
               <ul>
                 <li>bcms_blog.rb</li>
                 <li>bcms_event.rb</li>
               </ul>
-              <li>CSS</li>
+              <li>css</li>
               <ul>
                 <li>blueprint.rb</li>
                 <li>reset.rb</li>
                 <li>compass.rb *new*</li>
               </ul>
-              <li>DB</li>
+              <li>db</li>
               <ul>
                 <li>mongo.rb *new*</li>
                 <li>mysql.rb</li>
@@ -157,7 +157,7 @@
               <li>git.rb</li>
               <li>jquery.rb</li>
               <li>swfupload.rb *new*</li>
-              <li>Testing</li>
+              <li>testing</li>
               <ul>
                 <li>rspec.rb</li>
                 <li>shoulda.rb</li>
