add in new active_scaffold recipe

--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
             <li>rack/middleware.rb</li>
             <li>rails3</li>
               <ul>
+                <li>admin_interface</li>
+                <ul>
+                  <li>active_scaffold.rb</li>
+                </ul>
                 <li>auth</li>
                 <ul>
                   <li>devise.rb</li>
