no reason to mention they're .rb files. You don't type .rb when using them on command line

--- a/index.html
+++ b/index.html
@@ -105,66 +105,66 @@
         <h3 id="recipes">Recipes</h3>
         Here's a list of recipes for those interested:
           <ul>
-            <li>passenger/vhost.rb</li>
-            <li>rack/middleware.rb</li>
+            <li>passenger/vhost</li>
+            <li>rack/middleware</li>
             <li>rails3</li>
               <ul>
                 <li>admin_interface</li>
                 <ul>
-                  <li>active_scaffold.rb</li>
+                  <li>active_scaffold</li>
                 </ul>
                 <li>auth</li>
                 <ul>
-                  <li>devise.rb</li>
+                  <li>devise</li>
                 </ul>
-                <li>clean_files.rb</li>
+                <li>clean_files</li>
                 <li>db</li>
                 <ul>
-                  <li>mysql.rb</li>
+                  <li>mysql</li>
                 </ul>
                 <li>css</li>
                 <ul>
-                  <li>reset.rb</li>
+                  <li>reset</li>
                 </ul>
                 <li>js</li>
                 <ul>
-                  <li>jquery.rb</li>
+                  <li>jquery</li>
                 </ul>
-                <li>git.rb</li>
+                <li>git</li>
               </ul>
             <li>rails</li>
             <ul>
               <li>auth</li>
               <ul>
-                <li>authlogic.rb</li>
-                <li>clearance.rb</li>
-                <li>devise.rb *new*</li>
+                <li>authlogic</li>
+                <li>clearance</li>
+                <li>devise</li>
               </ul>
-              <li>clean_files.rb</li>
+              <li>clean_files</li>
               <li>cms</li>
               <ul>
-                <li>bcms_blog.rb</li>
-                <li>bcms_event.rb</li>
+                <li>bcms_blog</li>
+                <li>bcms_event</li>
               </ul>
               <li>css</li>
               <ul>
-                <li>blueprint.rb</li>
-                <li>reset.rb</li>
-                <li>compass.rb *new*</li>
+                <li>blueprint</li>
+                <li>reset</li>
+                <li>compass</li>
               </ul>
               <li>db</li>
               <ul>
-                <li>mongo.rb *new*</li>
-                <li>mysql.rb</li>
-                <li>postgres.rb</li>
+                <li>mongo</li>
+                <li>mysql</li>
+                <li>postgres</li>
               </ul>
-              <li>git.rb</li>
-              <li>jquery.rb</li>
-              <li>swfupload.rb *new*</li>
+              <li>git</li>
+              <li>jquery</li>
+              <li>swfupload</li>
               <li>testing</li>
               <ul>
-                <li>rspec.rb</li>
-                <li>shoulda.rb</li>
+                <li>rspec</li>
+                <li>shoulda</li>
               </ul>
             </ul>
           </ul>
