fix stupid doc error

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         <div class='usage'>
           <h3 id="usage">Usage</h3>
 
-          <div class='highlight'><pre>beet generate new_app --recipes="rails3/js/jquery, rails3/devise, rails3/git"</pre></div>
+          <div class='highlight'><pre>beet generate new_app --recipes="rails3/js/jquery, rails3/auth/devise, rails3/git"</pre></div>
           <p>This will create a new rails3 app for you, download jquery, setup Devise, and put the project into git.</p>
 
-          <div class='highlight'><pre>beet -g new_app -r="rails3/js/jquery, rails3/devise, rails3/git"</pre></div>
+          <div class='highlight'><pre>beet -g new_app -r="rails3/js/jquery, rails3/auth/devise, rails3/git"</pre></div>
           <p>This will do the same. Beet is built on Thor, and makes use of its excellent option parsing abilities.</p>
 
           <div class='highlight'><pre>beet -g new_app -r="http://path/to/recipe.rb"</pre></div>
