--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div id="main">
         
-        <div id="latest_version"><a href="#installing">0.6.6</a></div>
+        <div id="latest_version"><a href="#installing">0.6.7</a></div>
         
         <ul id="pagenav">
           <li><a href="#what">What</a></li>
@@ -125,6 +125,10 @@
                 <li>css</li>
                 <ul>
                   <li>reset</li>
+                </ul>
+                <li>file_uploads</li>
+                <ul>
+                  <li>paperclip</li>
                 </ul>
                 <li>js</li>
                 <ul>
